--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
             <nav className="bg-white shadow mb-8">
               <div className="container mx-auto px-4">
                 <div className="flex justify-between items-center h-16">
-                  <h1 className="text-xl font-semibold">Consent Dashboard</h1>
+                  <h1 className="text-xl font-semibold">New User Registration Consent Dashboard</h1>
                   <div className="space-x-4">
                     <button
                       className={`px-4 py-2 rounded ${
