--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,10 +28,10 @@
             <nav className="bg-white shadow mb-8">
               <div className="container mx-auto px-4">
                 <div className="flex justify-between items-center h-16">
-                  <h1 className="text-xl font-semibold">New User Registration Consent Dashboard</h1>
+                  <h1 className="text-2xl font-semibold text-blue-700">Consent Dashboard</h1>
                   <div className="space-x-4">
                     <button
-                      className={`px-4 py-2 rounded ${
+                      className={`px-2 py-1 rounded ${
                         view === 'dashboard'
                           ? 'bg-gradient-to-r from-blue-600 to-blue-800 font-bold text-white'
                           : 'font-bold text-gray-600 hover:text-gray-900'
@@ -41,7 +41,7 @@
                       Dashboard
                     </button>
                     <button
-                      className={`px-4 py-2 rounded ${
+                      className={`px-2 py-1 rounded ${
                         view === 'table'
                           ? 'bg-gradient-to-r from-blue-600 to-blue-800 font-bold text-white'
                           : 'font-bold text-gray-600 hover:text-gray-900'
